# ssd1306-on-pico

./: CMakeLists.txt  README.md  main.c
digitRenderer/: digitRenderer.c  digitRenderer.h
i2cSend/: i2cSend.c  i2cSend.h
mapGenerator/: mapGen.c
